samples/_failures_safe/1761042421_6487eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8a47918.c: In function ‘main’:
./samples/SAFE/__tmp_d8a47918.c:141:5: error: expected declaration or statement at end of input
  141 |     }
      |     ^
